# NeuralFive

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PROJECT_SUMMARY.md  PROMOTION_STRATEGY.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  environment.yml  five_ai.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_game.bat  run_tests.bat  run_tests.py  setup.py  start.py  start_game.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
__pycache__/: fast_chess.check_game_over-195.py313.1.nbc  fast_chess.check_game_over-195.py313.nbi  fast_chess.check_game_over-196.py313.1.nbc  fast_chess.check_game_over-196.py313.nbi  fast_chess.compute_best_move_fast-246.py313.1.nbc  fast_chess.compute_best_move_fast-246.py313.nbi  fast_chess.compute_best_move_fast-247.py313.1.nbc  fast_chess.compute_best_move_fast-247.py313.nbi  fast_chess.get_candidates_fast-167.py313.1.nbc  fast_chess.get_candidates_fast-167.py313.nbi  fast_chess.get_candidates_fast-168.py313.1.nbc  fast_chess.get_candidates_fast-168.py313.nbi  fast_chess.initialize_board-12.py313.1.nbc  fast_chess.initialize_board-12.py313.nbi  fast_chess.initialize_board-13.py313.1.nbc  fast_chess.initialize_board-13.py313.nbi  fast_chess.is_valid_pos-23.py313.1.nbc  fast_chess.is_valid_pos-23.py313.nbi  fast_chess.is_valid_pos-24.py313.1.nbc  fast_chess.is_valid_pos-24.py313.nbi  fast_chess.negamax_search-200.py313.1.nbc  fast_chess.negamax_search-200.py313.2.nbc  fast_chess.negamax_search-200.py313.nbi  fast_chess.negamax_search-201.py313.1.nbc  fast_chess.negamax_search-201.py313.2.nbc  fast_chess.negamax_search-201.py313.nbi  fast_chess.update_board_fast-28.py313.1.nbc  fast_chess.update_board_fast-28.py313.2.nbc  fast_chess.update_board_fast-28.py313.3.nbc  fast_chess.update_board_fast-28.py313.nbi  fast_chess.update_board_fast-29.py313.1.nbc  fast_chess.update_board_fast-29.py313.2.nbc  fast_chess.update_board_fast-29.py313.3.nbc  fast_chess.update_board_fast-29.py313.nbi
docs/: AI_ALGORITHM.md  DEVELOPMENT.md  README.md  api-reference.md  architecture-design.md  developer-guide.md  machine-learning.md  performance-optimization.md  quickstart.md  testing-guide.md  user-guide.md
docs/images/: README.md
examples/: ai_battle.py  basic_usage.py
scripts/: release.py
src/ai/: five_ai.py
src/game/: main.py
src/neuralfive/: __init__.py  __main__.py  ai_engine.py  game_state.py  gui.py
src/strategicmind/: __init__.py  main.py
src/strategicmind/ai/: __init__.py  engine.py  evaluator.py  search.py
src/strategicmind/game/: __init__.py  board.py  rules.py  state.py
src/strategicmind/ui/: __init__.py  game_ui.py  game_window.py  menu.py  settings.py
src/strategicmind/utils/: __init__.py  config.py  file_utils.py  logger.py  performance.py
tests/: __init__.py  test_ai.py  test_ai_engine.py  test_game_state.py
