[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartfive"
version = "1.0.0"
description = "An AI-powered Gomoku (Five in a Row) game with Pygame and Numba"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "SmartFive Team", email = "smartfive@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0.0",
    "numpy>=1.20.0",
    "numba>=0.50.0"
]

[project.urls]
Homepage = "https://github.com/SmartFive/SmartFive"
Repository = "https://github.com/SmartFive/SmartFive"
Documentation = "https://github.com/SmartFive/SmartFive/blob/main/README.md"

[project.scripts]
smartfive = "game.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"